Add ResponseEntity 2 Controller